<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.RegisterFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:background="@color/white">

    </ProgressBar>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="9">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">


                    <TextView
                        android:id="@+id/version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:layout_margin="10dp">

                    </TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account"
                        android:layout_margin="10dp">

                        <AutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:id="@+id/accountDropdownMenu"/>


                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        app:startIconDrawable="@drawable/ic_person"
                        android:layout_margin="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        app:startIconDrawable="@drawable/ic_lock"
                        android:layout_margin="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/restIP"
                        android:layout_margin="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/restIP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:hint="@string/restPort">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/restPort"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:hint="@string/socketPort">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/socketPort"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/iceTimeout"
                        android:layout_margin="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/iceTimeout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:text="@string/ringingFeedbackOption"/>

                        <com.google.android.material.button.MaterialButtonToggleGroup
                            android:id="@+id/ringingFeedbackToggleGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:singleSelection="true">
                            <com.google.android.material.button.MaterialButton
                                style="?attr/materialButtonOutlinedStyle"
                                android:id="@+id/appBtn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/app" />
                            <com.google.android.material.button.MaterialButton
                                style="?attr/materialButtonOutlinedStyle"
                                android:id="@+id/serverBtn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/server" />
                            <com.google.android.material.button.MaterialButton
                                style="?attr/materialButtonOutlinedStyle"
                                android:id="@+id/autoBtn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/auto" />
                        </com.google.android.material.button.MaterialButtonToggleGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_margin="8dp"
                            android:gravity="left"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="90dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:checked="true"
                                android:gravity="center"
                                android:text="@string/useTurn">

                            </TextView>

                            <Switch
                                android:id="@+id/useTurnSwitch"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:checked="true"
                                tools:ignore="UseSwitchCompatOrMaterialXml">

                            </Switch>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="90dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/enableTCPConnection">

                            </TextView>

                            <Switch
                                android:id="@+id/enableTCPConnectionSwitch"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:checked="true"
                                tools:ignore="UseSwitchCompatOrMaterialXml">

                            </Switch>
                        </LinearLayout>

                    </LinearLayout>




                </LinearLayout>


            </ScrollView>
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </Button>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>